tests/direct_dependent_unparsed/direct_dependent_unparsed.exp
No errors!
Error ------------------------------------------------------------------------------------------------- dependent.js:5:7

Unexpected identifier, expected the end of an expression statement (`;`)

   5| parse error
            ^^^^^



Found 1 error
